# 926-auto-test

./: .gitignore  README.md
cypress/: README.md  package.json
cypress/cypress/e2e/3-test-login/: login.cy.js
cypress/cypress/pages/: login-page.js
py-bdd/: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
py-bdd/features/: login.feature
py-bdd/pages/: login_page_playwright.py  login_page_selenium.py
py-bdd/step_defs/: test_login_playwright.py  test_login_selenium.py
roboto-framework/: .gitignore  README.md  requirements.txt
roboto-framework/libraries/: custom_keywords.py
roboto-framework/resources/: common.robot  login_page.robot
roboto-framework/tests/: login_tests.robot
roboto-framework/variables/: login_variables.py
test-cafe/: README.md  package.json  pnpm-lock.yaml
test-cafe/pages/: login-page.js
test-cafe/tests/: test-login.test.js
